<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_new_meeting_dialog_alert">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingTop="@dimen/padding_scrollview"
            android:paddingBottom="@dimen/padding_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <TextView
                android:id="@+id/edit_meeting_room"
                android:hint="@string/salle_de_reunion"
                android:textSize="@dimen/size_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_height" />
            <TextView
                android:id="@+id/edit_meeting_date"
                android:hint="@string/date_de_la_reunion"
                android:textSize="@dimen/size_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_height"
                android:layout_marginTop="@dimen/margin_text" />

            <TextView
                android:id="@+id/edit_meeting_start_hour"
                android:hint="@string/heure_de_debut"
                android:textSize="@dimen/size_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_height"
                android:layout_marginTop="@dimen/margin_text"/>

            <TextView
                android:id="@+id/edit_meeting_end_hour"
                android:hint="@string/heure_de_fin"
                android:textSize="@dimen/size_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_height"
                android:layout_marginTop="@dimen/margin_text"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_meeting_subject"
                android:hint="@string/sujet_de_la_reunion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_meeting_subject_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/size_text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_meeting_participant"
                android:hint="@string/participants_a_la_reunion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_meeting_participant_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/size_text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>