<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:layout_width="@dimen/size_image_width"
            android:layout_height="@dimen/size_image_height"
...

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_button_right"
            android:background="@null"
            android:id="@+id/delete_meeting"
            app:layout_constraintTop_toTopOf="@+id/image"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_delete"
            />

...
